--- a/.eslintrc
+++ b/.eslintrc
@@ -14,6 +14,7 @@
     "plugin:react-native/all"
   ],
   "rules": {
+    "react-native/no-color-literals": 0,
     "react/jsx-filename-extension": [
       "error",
       {
